--- a/cluster/apps/media/flood/helm-release.yaml
+++ b/cluster/apps/media/flood/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
       data:
         enabled: true
         storageClass: longhorn
-        accessModes: ReadWriteOnce
+        accessMode: ReadWriteOnce
         labels:
           kasten.io/backup-volume: enabled
 
