--- a/cluster/apps/database-system/emqx/helm-release.yaml
+++ b/cluster/apps/database-system/emqx/helm-release.yaml
@@ -64,7 +64,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
         path: /
         hosts:
           - &host "emqx.${CLUSTER_DOMAIN}"
