--- a/cluster/core/kasten-io/k10/helm-release.yaml
+++ b/cluster/core/kasten-io/k10/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       remediateLastFailure: true # remediate the last failure, when no retries remain
     cleanupOnFail: true
   valuesFrom:
-    - type: Secret
+    - kind: Secret
       name: k10-helm-secret
   # https://github.com/kastenhq/partner-charts/blob/main/charts/k10/k10/4.5.1400/values.yaml
   values:
