--- a/cluster/core/kasten-io/k10/helm-release.yaml
+++ b/cluster/core/kasten-io/k10/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
         cert-manager.io/cluster-issuer: letsencrypt-production
         kubernetes.io/ingress.class: traefik
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
-        traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
+        traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
       urlPath: k10
       hosts:
         - *host
