--- a/cluster/apps/home/unifi/helm-release.yaml
+++ b/cluster/apps/home/unifi/helm-release.yaml
@@ -29,6 +29,8 @@ spec:
       tag: v7.1.61
     env:
       TZ: ${TZ}
+    podSecurityContext:
+      fsGroup: ${FS_GROUP}
 
     service:
       main:
