--- a/cluster/core/kube-system/snapshot-controller/setup-snapshot-controller.yaml
+++ b/cluster/core/kube-system/snapshot-controller/setup-snapshot-controller.yaml
@@ -10,7 +10,7 @@ kind: StatefulSet
 apiVersion: apps/v1
 metadata:
   name: snapshot-controller
-  namespace: longhorn-system # TODO: replace with the namespace you want for your controller, e.g. kube-system
+  namespace: kube-system # TODO: replace with the namespace you want for your controller, e.g. kube-system
 spec:
   serviceName: snapshot-controller
   replicas: 1
