feat(cluster): update existing traefik middlewares and add cloudflare-only middleware
Signed-off-by: Devin Buhl <devin@buhl.casa>

--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
         hajimari.io/enable: "true"
         hajimari.io/icon: "video-input-antenna"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
       hosts:
         - host: "echo-server.${SECRET_DOMAIN}"
           paths:
