--- a/cluster/apps/networking/traefik/middlewares/kustomization.yaml
+++ b/cluster/apps/networking/traefik/middlewares/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - local-only-access.yaml
+  - cloudflare-only.yaml
+  - internal-only.yaml
