add phpamyadmin link

--- a/cluster/apps/home/homer/pages/admin.yaml
+++ b/cluster/apps/home/homer/pages/admin.yaml
@@ -19,6 +19,9 @@ services:
         logo: "https://home.${CLUSTER_DOMAIN}/assets/data/k10/android-chrome-maskable-512x512.png"
         url: "https://k10.${CLUSTER_DOMAIN}/k10/"
         subtitle: Backup manager
+      - name: phpMyAdmin
+        logo: "https://home.${CLUSTER_DOMAIN}/assets/data/phpMyAdmin/android-chrome-maskable-512x512.png"
+        url: "https://{NAS_ADDR}:9443"
 
   - name: System Management
     icon: fas fa-project-diagram
