--- a/cluster/apps/home/homer/pages/config.yaml
+++ b/cluster/apps/home/homer/pages/config.yaml
@@ -65,10 +65,10 @@ services:
         subtitle: "Home automation system"
         logo: "https://home.${CLUSTER_DOMAIN}/assets/data/home-assistant/android-chrome-maskable-512x512.png"
         url: "https://home-assistant.${CLUSTER_DOMAIN}"
-      - name: Calibre Web
-        logo: "https://home.${CLUSTER_DOMAIN}/assets/data/calibre-web/android-chrome-maskable-512x512.png"
-        url: "https://calibre-web.${CLUSTER_DOMAIN}"
-        subtitle: Book collection manager
+      - name: Wiki.js
+        logo: "https://home.${CLUSTER_DOMAIN}/assets/data/wikijs/android-chrome-maskable-512x512.png"
+        url: "https://wikijs.${CLUSTER_DOMAIN}"
+        subtitle: Documentation Wiki
       - name: Paperless
         subtitle: Digital document storage
         logo: "https://home.${CLUSTER_DOMAIN}/assets/data/paperless/android-chrome-maskable-512x512.png"
@@ -77,3 +77,7 @@ services:
         logo: "https://home.${CLUSTER_DOMAIN}/assets/data/bitwarden/android-chrome-maskable-512x512.png"
         url: "https://vault.${CLUSTER_DOMAIN}"
         subtitle: Password manager
+      - name: Calibre Web
+        logo: "https://home.${CLUSTER_DOMAIN}/assets/data/calibre-web/android-chrome-maskable-512x512.png"
+        url: "https://calibre-web.${CLUSTER_DOMAIN}"
+        subtitle: Book collection manager
