--- a/cluster/apps/home/wikijs/helm-release.yaml
+++ b/cluster/apps/home/wikijs/helm-release.yaml
@@ -46,7 +46,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
         hosts:
-          - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
+          - host: &host "wiki.${CLUSTER_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
