fix external middleware

--- a/cluster/apps/networking/traefik/addons/middleware/external.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external.yaml
@@ -7,6 +7,5 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: external
-      - name: security
-        namespace: auth-system
+      - name: cloudflare-ips
+      - name: no-auth
