--- a/cluster/apps/auth-system/vaultwarden/helm-release.yaml
+++ b/cluster/apps/auth-system/vaultwarden/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
           external-dns/is-public: "true"
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd,bitwarden-theme@file
+          traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd,bitwarden-theme@file
         hosts:
           - host: &host "vault.${CLUSTER_DOMAIN}"
             paths:
