--- a/cluster/apps/home/theme-park/helm-release.yaml
+++ b/cluster/apps/home/theme-park/helm-release.yaml
@@ -51,7 +51,7 @@ spec:
           external-dns/is-public: "true"
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-no-auth@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
         hosts:
           - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
             paths:
