--- a/cluster/apps/networking/traefik/addons/middleware/kustomization.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/kustomization.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cloudflare.yaml
+  - cloudflare-only.yaml
   - error-handling.yaml
   - external-auth.yaml
   - internal-auth.yaml
   - internal.yaml
-  - local-only-access.yaml
+  - local-only.yaml
   - no-auth.yaml
   - rate-limit.yaml
   - secure-headers.yaml
