--- a/cluster/apps/networking/traefik/addons/dashboard/ingress.yaml
+++ b/cluster/apps/networking/traefik/addons/dashboard/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
+    # traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   tls:
