--- a/cluster/apps/networking/traefik/addons/middleware/external.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: external-auth
+  name: external
   namespace: networking
 spec:
   chain:
