--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -93,14 +93,14 @@ spec:
             traefik.ingress.kubernetes.io/router.entrypoints: websecure
             traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
           hosts:
-            - host: "{{ .Release.Name }}-code.${CLUSTER_DOMAIN}"
+            - host: &host "{{ .Release.Name }}-code.${CLUSTER_DOMAIN}"
               paths:
                 - path: /
                   pathType: Prefix
           tls:
             - secretName: "{{ .Release.Name }}-code-tls"
               hosts:
-                - "{{ .Release.Name }}-code.${CLUSTER_DOMAIN}"
+                - *host
         volumeMounts:
           - name: config
             mountPath: /config
