--- a/cluster/core/kubernetes-dashboard/helm-release.yaml
+++ b/cluster/core/kubernetes-dashboard/helm-release.yaml
@@ -27,13 +27,13 @@ spec:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         kubernetes.io/ingress.class: traefik
-        traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
+        traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
       hosts:
-        - dashboard.${CLUSTER_DOMAIN}
+        - &host dashboard.${CLUSTER_DOMAIN}
       tls:
         - hosts:
-            - dashboard.${CLUSTER_DOMAIN}
+            - *host
           secretName: "kubernetes-dashboard-tls"
     # protocolHttp: true
     extraArgs:
