--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-external-auth@kubernetescrd
 
         hosts:
           - host: &host "plex.${CLUSTER_DOMAIN}"
