--- a/provision/ansible/requirements.yml
+++ b/provision/ansible/requirements.yml
@@ -6,6 +6,8 @@ collections:
     version: 1.2.1
   - name: ansible.posix
     version: 1.3.0
+  - name: ansible.utils
+    version: 2.6.1
 roles:
   - src: xanmanning.k3s
     version: v3.1.2
