--- a/cluster/apps/home/vikunja/helm-release.yaml
+++ b/cluster/apps/home/vikunja/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
         hosts:
-          - host: &host "vik.${CLUSTER_DOMAIN}"
+          - host: &host "vikunja.${CLUSTER_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
