--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -15,6 +15,7 @@ stringData:
     SMTP_FROM: ENC[AES256_GCM,data:I+hp95eu/J8QeLQzBh80+wdm,iv:lbBRFBVutJASP7Qq3TPsg8pmaOdWASDx6KFnearHgQM=,tag:8+643s0Uj/FRU+h/Py5D6g==,type:str]
     SMTP_USERNAME: ENC[AES256_GCM,data:Uzu6tJI1OCZYMK+5,iv:PATilIaQz7mxdol3QrDUCO7kByPLDgtql/QvO2u7hDk=,tag:WBtjRss3PYGsbBviYG32Og==,type:str]
     SMTP_PASSWORD: ENC[AES256_GCM,data:TR6H+CbZ9/8cmqKjWZWG7A==,iv:kLmFnm5h9A7Sxbyt3HV6u+mR2361TznzJwoZa00LlWQ=,tag:2ldMN0t05h1vP/8Jg5rYmg==,type:str]
+    SMTP_PORT: ENC[AES256_GCM,data:T+rt,iv:FS1gVE0zKXDvzgj67s/0CITpmZ1Gkjbim1IeLeX44Gc=,tag:uFZOXx3Alanx2lwxtzGpyQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -30,8 +31,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-14T02:16:37Z"
-    mac: ENC[AES256_GCM,data:8Ajb6LZbWBle8tXg2vTkVpg+Ju/bCTNby1jOoy8J3e71uWusQLZ2+6lI6q4D+z8wi2/0O3lFIzlRmLaX6q2h5KebERDiITTxRvn4W4fAXy+OWM9qf++9iCyJdkz740X5/XWzGG52ymjCfoG8Hk62aHV52JLmm7jTmFZTyZYa9P0=,iv:JjBfDLDGY8rJIrdNTa2sNmIUokYcY1wMc8ul//Qx7eg=,tag:FcmtmYHVURw3/6+tNiVHSg==,type:str]
+    lastmodified: "2022-05-14T02:43:27Z"
+    mac: ENC[AES256_GCM,data:4SA6mIdd4YsWiOp479HRV8ZSo/y4IR+6RQBa5/PkUpQyk7Z0UfFeg/ejJA4cSqVEWoSQWtC0xzQsY9iDN1CwQgSX2cTyBGwe3qn72e7j4oQHbeOb2+E5wfMQt8XFSc2uFHq5+dVQ3yPTZhZNvOaNZZmE+IcUqdpjevWX8b8t4mc=,iv:juS5HV+ksq8+s0be6cg1DfoeSPx1g2rQEds/EyxaMpo=,tag:4xW9LjHt5I8ZbvS+DfJoxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
