--- a/cluster/apps/media/prowlarr/helm-release.yaml
+++ b/cluster/apps/media/prowlarr/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
       retries: 3
   values:
     image:
-      repository: ghcr.io/k8s-at-home/prowlarr
-      tag: v0.4.0.1765
+      repository: ghcr.io/k8s-at-home/prowlarr-nightly
+      tag: v0.4.0.1769
     ingress:
       main:
         enabled: true
