fix block service, was disabled for some reason

--- a/cluster/apps/networking/blocky/helm-release.yaml
+++ b/cluster/apps/networking/blocky/helm-release.yaml
@@ -24,6 +24,8 @@ spec:
       TZ: ${TZ}
 
     service:
+      main:
+        enabled: true
       dns:
         enabled: true
         type: LoadBalancer
