fix metrics and add dashboard

--- a/cluster/apps/home/vikunja/service-monitor.yaml
+++ b/cluster/apps/home/vikunja/service-monitor.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/name: vikunja
 spec:
   endpoints:
-    - path: /metrics
+    - path: /api/v1/metrics
       targetPort: http
   jobLabel: vikunja
   namespaceSelector:
