--- a/cluster/apps/media/lidarr/helm-release.yaml
+++ b/cluster/apps/media/lidarr/helm-release.yaml
@@ -44,6 +44,21 @@ spec:
           - secretName: "{{ .Release.Name }}-tls"
             hosts:
               - *host
+    metrics:
+      enabled: true
+      serviceMonitor:
+        interval: 5m
+        scrapeTimeout: 1m
+      prometheusRule:
+        enabled: false
+      exporter:
+        image:
+          repository: ghcr.io/onedr0p/exportarr
+          tag: v1.0.0
+        env:
+          port: 9794
+          additionalMetrics: true
+          unknownQueueItems: true
     persistence:
       config:
         enabled: true
