--- a/cluster/apps/media/radarr/dashboard/kustomization.yaml
+++ b/cluster/apps/media/radarr/dashboard/kustomization.yaml
@@ -12,3 +12,4 @@ generatorOptions:
     kustomize.toolkit.fluxcd.io/substitute: disabled
   labels:
     grafana_dashboard: "true"
+    grafana_dashboard_folder: /tmp/dashboards/media
