--- a/cluster/apps/media/lidarr/dashboard/kustomization.yaml
+++ b/cluster/apps/media/lidarr/dashboard/kustomization.yaml
@@ -10,5 +10,6 @@ generatorOptions:
   disableNameSuffixHash: true
   annotations:
     kustomize.toolkit.fluxcd.io/substitute: disabled
+    grafana_dashboard_folder: media
   labels:
     grafana_dashboard: "true"
