enable config pvc

--- a/cluster/apps/media/sabnzbd/helm-release.yaml
+++ b/cluster/apps/media/sabnzbd/helm-release.yaml
@@ -51,6 +51,7 @@ spec:
       fsGroup: ${FS_GROUP}
     persistence:
       config:
+        enabled: true
         storageClass: longhorn
         labels:
           kasten.io/backup-volume: enabled
