schedule downloaders on k8s-2

--- a/cluster/apps/media/sabnzbd/helm-release.yaml
+++ b/cluster/apps/media/sabnzbd/helm-release.yaml
@@ -65,3 +65,13 @@ spec:
       requests:
         cpu: 100m
         memory: 250Mi
+    # Schedule on k8s-2 as it has better specs
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/hostname
+                  operator: In
+                  values:
+                    - k8s-2
