--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -78,6 +78,17 @@ spec:
       serviceMonitor:
         interval: 5m
         scrapeTimeout: 1m
+    # Schedule on k8s-2 as it has better specs
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/hostname
+                  operator: In
+                  values:
+                    - k8s-2
+
   valuesFrom:
     - valuesKey: QBITTORRENT_USER
       kind: Secret
