--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -154,7 +154,7 @@ spec:
         rules:
           - alert: PaperlessMailError
             expr: |
-              sum by (app) (count_over_time({app="paperless"} |~ "(?i)[ERROR] [paperless_mail]"[15m])) > 0
+              sum by (app) (count_over_time({app="paperless"} |~ "(?i)\\[ERROR\\] \\[paperless_mail\\]"[10m])) > 0
             for: 2m
             labels:
               severity: critical
