use longhorn backups

--- a/cluster/apps/database-system/postgres/persistent-volume-claim.yaml
+++ b/cluster/apps/database-system/postgres/persistent-volume-claim.yaml
@@ -4,6 +4,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
   namespace: database-system
+  labels:
+    recurring-job.longhorn.io/backup: enabled
 spec:
   storageClassName: longhorn
   accessModes:
