--- a/cluster/apps/home/vikunja/helm-release.yaml
+++ b/cluster/apps/home/vikunja/helm-release.yaml
@@ -33,6 +33,8 @@ spec:
         accessMode: ReadWriteOnce
         size: 1Gi
         mountpath: /app/vikunja/files
+        labels:
+          recurring-job.longhorn.io/backup: enabled
 
     ingress:
       main:
