--- a/cluster/apps/home/wikijs/helm-release.yaml
+++ b/cluster/apps/home/wikijs/helm-release.yaml
@@ -59,6 +59,8 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
 
       data:
         enabled: true
