--- a/cluster/apps/media/lidarr/helm-release.yaml
+++ b/cluster/apps/media/lidarr/helm-release.yaml
@@ -63,6 +63,8 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
       media:
         enabled: true
         existingClaim: media-pv-claim
