--- a/cluster/apps/media/overseerr/helm-release.yaml
+++ b/cluster/apps/media/overseerr/helm-release.yaml
@@ -50,6 +50,8 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
       media:
         enabled: true
         existingClaim: media-pv-claim
