--- a/cluster/apps/home/appdaemon/helm-release.yaml
+++ b/cluster/apps/home/appdaemon/helm-release.yaml
@@ -34,8 +34,6 @@ spec:
       TZ: ${TZ}
       DASH_URL: "http://$HOSTNAME:5050"
       HA_URL: http://home-assistant:8123
-    podSecurityContext:
-      fsGroup: ${FS_GROUP}
 
     ingress:
       main:
@@ -57,9 +55,9 @@ spec:
     persistence:
       config:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/appdaemon
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
 
     addons:
       codeserver:
