--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -29,8 +29,6 @@ spec:
       tag: 1.25.1
     env:
       TZ: ${TZ}
-    podSecurityContext:
-      fsGroup: ${FS_GROUP}
 
     ingress:
       main:
@@ -53,10 +51,9 @@ spec:
     persistence:
       config:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/zigbee2mqtt
-        mountPath: /data
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
       usb:
         enabled: true
         type: hostPath
