--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -29,8 +29,6 @@ spec:
       tag: 6.9.1
     env:
       TZ: ${TZ}
-    podSecurityContext:
-      fsGroup: ${FS_GROUP}
 
     ingress:
       main:
@@ -52,9 +50,9 @@ spec:
     persistence:
       config:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/zwavejs2mqtt
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
       usb:
         enabled: true
         type: hostPath
