add backup unifi

--- a/cluster/apps/home/unifi/helm-release.yaml
+++ b/cluster/apps/home/unifi/helm-release.yaml
@@ -63,3 +63,5 @@ spec:
         storageClass: longhorn
         accessMode: ReadWriteOnce
         size: 1Gi
+        labels:
+          recurring-job.longhorn.io/backup: enabled
