--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -56,9 +56,9 @@ spec:
     persistence:
       config:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/home-assistant
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
 
     metrics:
       enabled: true
