--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -55,3 +55,5 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
