--- a/cluster/apps/home/baikal/helm-release.yaml
+++ b/cluster/apps/home/baikal/helm-release.yaml
@@ -34,14 +34,14 @@ spec:
     persistence:
       config:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/baikal/config
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
       data:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/baikal/data
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
     mariadb:
       enabled: false
     ingress:
