[baikal] use longhorn

--- a/cluster/apps/home/baikal/helm-release.yaml
+++ b/cluster/apps/home/baikal/helm-release.yaml
@@ -35,11 +35,15 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        accessMode: ReadWriteOnce
+        size: 512Mi
         labels:
           recurring-job.longhorn.io/backup: enabled
       data:
         enabled: true
         storageClass: longhorn
+        accessMode: ReadWriteOnce
+        size: 512Mi
         labels:
           recurring-job.longhorn.io/backup: enabled
     mariadb:
