--- a/cluster/apps/home/wikijs/helm-release.yaml
+++ b/cluster/apps/home/wikijs/helm-release.yaml
@@ -64,6 +64,6 @@ spec:
 
       data:
         enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /volume1/shared/code/wikijs
+        storageClass: longhorn
+        labels:
+          recurring-job.longhorn.io/backup: enabled
