--- a/cluster/apps/database-system/postgres/persistent-volume-claim.yaml
+++ b/cluster/apps/database-system/postgres/persistent-volume-claim.yaml
@@ -5,7 +5,7 @@ metadata:
   name: postgres-pvc
   namespace: database-system
   labels:
-    recurring-job.longhorn.io/backup: enabled
+    recurring-job-group.longhorn.io/backup: enabled
 spec:
   storageClassName: longhorn
   accessModes:
