--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -56,4 +56,4 @@ spec:
         enabled: true
         storageClass: longhorn
         labels:
-          recurring-job.longhorn.io/backup: enabled
+          recurring-job-group.longhorn.io/backup: enabled
