--- a/cluster/apps/media/bazarr/helm-release.yaml
+++ b/cluster/apps/media/bazarr/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
         enabled: true
         storageClass: longhorn
         labels:
-          recurring-job.longhorn.io/backup: enabled
+          recurring-job-group.longhorn.io/backup: enabled
       media:
         enabled: true
         existingClaim: media-pv-claim
