--- a/cluster/apps/media/calibre/helm-release.yaml
+++ b/cluster/apps/media/calibre/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
         enabled: true
         storageClass: longhorn
         labels:
-          recurring-job.longhorn.io/backup: enabled
+          recurring-job-group.longhorn.io/backup: enabled
       media:
         enabled: true
         mountPath: /media
