--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -61,7 +61,7 @@ spec:
         enabled: true
         storageClass: longhorn
         labels:
-          recurring-job.longhorn.io/backup: enabled
+          recurring-job-group.longhorn.io/backup: enabled
       media:
         enabled: true
         existingClaim: media-pv-claim
