[wikijs] fix pvc

--- a/cluster/apps/home/wikijs/helm-release.yaml
+++ b/cluster/apps/home/wikijs/helm-release.yaml
@@ -59,11 +59,15 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        accessModes: ReadWriteOnce
+        size: 1Gi
         labels:
           recurring-job-group.longhorn.io/backup: enabled
 
       data:
         enabled: true
         storageClass: longhorn
+        accessModes: ReadWriteOnce
+        size: 1Gi
         labels:
           recurring-job-group.longhorn.io/backup: enabled
