[wikijs] fix pvc

--- a/cluster/apps/home/wikijs/helm-release.yaml
+++ b/cluster/apps/home/wikijs/helm-release.yaml
@@ -59,7 +59,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
-        accessModes: ReadWriteOnce
+        accessMode: ReadWriteOnce
         size: 1Gi
         labels:
           recurring-job-group.longhorn.io/backup: enabled
@@ -67,7 +67,7 @@ spec:
       data:
         enabled: true
         storageClass: longhorn
-        accessModes: ReadWriteOnce
+        accessMode: ReadWriteOnce
         size: 1Gi
         labels:
           recurring-job-group.longhorn.io/backup: enabled
