--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -15,6 +15,7 @@ data:
   METALLB_EMQX_ADDR: 192.168.1.226
   METALLB_PLEX_ADDR: 192.168.1.227
   METALLB_POSTGRES_ADDR: 192.168.1.228
+  METALLB_FACTORIO_ADDR: 192.168.1.229
   NAS_ADDR: 192.168.1.128
   GATEWAY_IP: 192.168.1.1
   TZ: America/Vancouver
