feat(ansible): add handler to restart node if needed
Signed-off-by: Devin Buhl <devin@buhl.casa>

--- a/provision/ansible/roles/ubuntu/tasks/main.yml
+++ b/provision/ansible/roles/ubuntu/tasks/main.yml
@@ -23,6 +23,10 @@
   tags:
     - filesystem
 
+- include: unattended-upgrades.yml
+  tags:
+    - unattended-upgrades
+
 - include: user.yml
   tags:
     - user
