--- a/cluster/apps/media/prowlarr/helm-release.yaml
+++ b/cluster/apps/media/prowlarr/helm-release.yaml
@@ -48,6 +48,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        size: 2Gi
         labels:
           recurring-job-group.longhorn.io/backup: enabled
       media:
